cmake_minimum_required(VERSION 3.5)
project(DK_game C)
set(CMAKE_C_STANDARD 99)
add_executable(DK_game Data/main.c )
find_package(SDL2 REQUIRED)
include_directories("usr/include/SDL2")
target_link_libraries(DK_game ${SDL2_LIBRARY} -lSDL2)
target_link_libraries(DK_game ${SDL2_LIBRARY}-lSDL2_mixer)
target_link_libraries(DK_game ${SDL2_image_LIBRARY} -lSDL2_image)